--- a/style.css
+++ b/style.css
@@ -1,1 +1,111 @@
+.td {
+    width: 70%;
+    text-align: center;
+    border: 1px solid black;
+}
+
+.title {
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 28px;
+}
+
+.title2 {
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 10px;
+}
+
+.Email {
+    border: 1px solid;
+    border-radius: 4px;
+    padding: 8px 12px;
+}
+
+.form{
+    text-align: center;
+}
+
+.style {
+    margin: 50px auto;
+}
+
+.button1 {
+    width: 100%;
+    color: white;
+    background-color: black;
+    padding: 12px 55px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 15px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.button2 {
+    width: 100%;
+    color: black;
+    background-color: white;
+    padding: 12px 20px;
+    text-align: center;
+    font-size: 14px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.button3 {
+    width: 100%;
+    color: black;
+    background-color: white;
+    padding: 12px 20px;
+    text-align: center;
+    font-size: 14px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.Join {
+    text-align: center;
+}
+
+.div{
+    padding: 5px 555px;
+}
+
+.privacy {
+    color: blue;
+    cursor: pointer;
+}
+.footer {
+    text-align: center;
+}
+
+.text1 {
+    color: black;
+    font-size: 12px;
+    text-align: center;
+}
+
+.privacy {
+    color: blue;
+    cursor: pointer;
+    text-align: center;
+}
+
+.text2 {
+    color: black;
+    font-size: 12px;
+    text-align: center;
+}
+
+.terms {
+    color: blue;
+    cursor: pointer;
+    text-align: center;
+}
+
+.table2 {
+    margin-left: auto;
+    margin-right: auto;
+}
 
