--- a/style.css
+++ b/style.css
@@ -68,8 +68,9 @@
     text-align: center;
 }
 
-.div{
-    padding: 5px 555px;
+.diva {
+    text-align: center;
+    margin: auto;
 }
 
 .privacy {
